[package]
name = "minigrep_demo_fengzhyuan"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Minigrep demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3